--- a/temario/primer-ejercicio/test/simulador.html
+++ b/temario/primer-ejercicio/test/simulador.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Test | Víctor Gutiérrez Marcos</title>
+    <title>Simulador de test | Víctor Gutiérrez Marcos</title>
     <meta name="description" content="Simulador de exámenes tipo test para la oposición a Técnico Comercial y Economista del Estado">
     
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Simulador de Test | Víctor Gutiérrez Marcos">
+    <meta property="og:title" content="Simulador de test | Víctor Gutiérrez Marcos">
     <meta property="og:description" content="Practica con preguntas de exámenes oficiales de la oposición a TCEE">
     <meta property="og:image" content="https://victorgutierrezmarcos.es/social-preview.png">
     <meta property="og:url" content="https://victorgutierrezmarcos.es/temario/primer-ejercicio/test/simulador.html">
@@ -706,7 +706,7 @@
     <header class="site-header">
         <div class="header-content">
             <h1 class="site-title"><a href="../../../index.html">Víctor Gutiérrez Marcos</a></h1>
-            <p class="site-description">Simulador de Test - Oposición TCEE</p>
+            <p class="site-description">Simulador de test - Oposición TCEE</p>
         </div>
     </header>
 
@@ -732,7 +732,7 @@
                         <span>›</span>
                         <a href="../primer-ejercicio.html">Primer ejercicio</a>
                         <span>›</span>
-                        Simulador de Test
+                        Simulador de test
                     </nav>
                     
                     <h2 class="section-title">SIMULADOR DE TEST</h2>
@@ -784,13 +784,13 @@
                             <div class="config-grid config-grid-2col">
                                 <div class="config-item">
                                     <label for="num-preguntas">Número de preguntas:</label>
-                                    <input type="number" id="num-preguntas" value="50" min="1" max="100">
+                                    <input type="number" id="num-preguntas" value="50" min="1" max="500">
                                     <span class="config-hint">Máximo: <span id="max-preguntas">0</span></span>
                                 </div>
                                 <div class="config-item">
-                                    <label for="tiempo-examen">Tiempo (minutos):</label>
-                                    <input type="number" id="tiempo-examen" value="120" min="1" max="300">
-                                    <span class="config-hint">Duración del examen</span>
+                                    <label for="tiempo-examen">Duración del examen (minutos):</label>
+                                    <input type="number" id="tiempo-examen" value="120" min="1" max="500">
+                                    <span class="config-hint"> </span>
                                 </div>
                             </div>
                             <div class="config-grid config-grid-3col" style="margin-top: 1rem;">
