--- a/temario/tercer-ejercicio.html
+++ b/temario/tercer-ejercicio.html
@@ -25,7 +25,7 @@
         <div class="nav-container">
             <ul class="nav-list">
                 <li><a href="../index.html">INTRODUCCIÓN</a></li>
-                <li><a href="index.html" class="active">TEMARIO</a></li>
+                <li><a href="../temario.html" class="active">TEMARIO</a></li>
                 <li><a href="../organizacion.html">ORGANIZACIÓN</a></li>
                 <li><a href="../enlaces.html">ENLACES</a></li>
                 <li><a href="../sobre-mi.html">SOBRE MÍ</a></li>
