--- a/index.html
+++ b/index.html
@@ -142,5 +142,6 @@
     </footer>
     <script src="search-engine.js"></script>
     <script src="search-ui.js"></script>
+    <script src="course-banner.js"></script>
 </body>
 </html>
