--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -122,5 +122,6 @@
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     <script src="search-engine.js"></script>
     <script src="search-ui.js"></script>
+    <script src="course-banner.js"></script>
 </body>
 </html>
