--- a/organizacion.html
+++ b/organizacion.html
@@ -141,5 +141,6 @@
     </footer>
     <script src="search-engine.js"></script>
     <script src="search-ui.js"></script>
+    <script src="course-banner.js"></script>
 </body>
 </html>
