--- a/enlaces.html
+++ b/enlaces.html
@@ -61,7 +61,7 @@
                    ℹ️ Más información
                 </a>
                 <div class="course-contact">
-                    <strong>📩 Contacto WhatsApp:</strong> Víctor: 638224520 | Juan Luis: 644882469
+                    <strong>📩 Contacto WhatsApp:</strong> Víctor: <a href="https://wa.link/e4nr5s">63822452</a> | Juan Luis: 644882469
                 </div>
             </div>
         </div>
