--- a/enlaces.html
+++ b/enlaces.html
@@ -60,9 +60,9 @@
                 <a href="https://docs.google.com/document/d/11OcJBL2BPtYyMYO2_2-AP2KD2VbrvJFOK49zFi_dUoo/edit?tab=t.0" target="_blank" class="course-btn">
                    ℹ️ Más información
                 </a>
-                <div class="course-contact">
-                    <strong>📩 Contacto WhatsApp:</strong> Víctor: <a href="https://wa.link/e4nr5s">63822452</a> | Juan Luis: 644882469
-                </div>
+                <a href="https://wa.link/e4nr5s" target="_blank" class="course-btn">
+                    <strong>📩 Contactar por WhatsApp</strong>
+                </a>
             </div>
         </div>
         
