--- a/enlaces.html
+++ b/enlaces.html
@@ -60,7 +60,7 @@
                 <a href="https://docs.google.com/document/d/11OcJBL2BPtYyMYO2_2-AP2KD2VbrvJFOK49zFi_dUoo/edit?tab=t.0" target="_blank" class="course-btn">
                    ℹ️ Más información
                 </a>
-                <a href="https://wa.link/e4nr5s" target="_blank" class="course-btn">
+                <a href="https://wa.link/38nddv" target="_blank" class="course-btn">
                     <strong>📩 Contactar por WhatsApp</strong>
                 </a>
             </div>
