--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -58,11 +58,11 @@
             
             <div class="course-actions">
                 <a href="https://docs.google.com/document/d/11OcJBL2BPtYyMYO2_2-AP2KD2VbrvJFOK49zFi_dUoo/edit?tab=t.0" target="_blank" class="course-btn">
-                    ℹ️ Más información
+                   ℹ️ Más información
                 </a>
-                <div class="course-contact">
-                    <strong>📩 Contacto WhatsApp:</strong> Víctor: 638224520 | Juan Luis: 644882469
-                </div>
+                <a href="https://wa.link/38nddv" target="_blank" class="course-btn">
+                    <strong>📩 Contactar por WhatsApp</strong>
+                </a>
             </div>
         </div>
         
