--- a/404.html
+++ b/404.html
@@ -237,7 +237,7 @@
                         <div class="error-suggestions">
                             <h3>Quizás buscabas...</h3>
                             <ul class="suggestions-list">
-                                <li><a href="/temario/index.html">📚 Temario</a></li>
+                                <li><a href="/temario.html">📚 Temario</a></li>
                                 <li><a href="/organizacion.html">📁 Organización</a></li>
                                 <li><a href="/enlaces.html">🔗 Enlaces</a></li>
                             </ul>
