--- a/organizacion.html
+++ b/organizacion.html
@@ -78,7 +78,7 @@
         <div class="nav-container">
             <ul class="nav-list">
                 <li><a href="index.html">INTRODUCCIÓN</a></li>
-                <li><a href="temario/index.html">TEMARIO</a></li>
+                <li><a href="temario.html">TEMARIO</a></li>
                 <li><a href="organizacion.html" class="active">ORGANIZACIÓN</a></li>
                 <li><a href="enlaces.html">ENLACES</a></li>
                 <li><a href="sobre-mi.html">SOBRE MÍ</a></li>
