--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             
             <div class="course-actions">
-                <a href="https://docs.google.com/document/d/11OcJBL2BPtYyMYO2_2-AP2KD2VbrvJFOK49zFi_dUoo/edit?tab=t.0" target="_blank" class="course-btn">
+                <a href="informacion_del_curso.pdf" target="_blank" class="course-btn">
                    ℹ️ Más información
                 </a>
                 <a href="https://wa.link/38nddv" target="_blank" class="course-btn">
