--- a/temario/primer-ejercicio/test/simulador.html
+++ b/temario/primer-ejercicio/test/simulador.html
@@ -786,7 +786,7 @@
         <div class="nav-container">
             <ul class="nav-list">
                 <li><a href="../../../index.html">INTRODUCCIÓN</a></li>
-                <li><a href="../../index.html">TEMARIO</a></li>
+                <li><a href="../../../temario.html">TEMARIO</a></li>
                 <li><a href="../../../organizacion.html">ORGANIZACIÓN</a></li>
                 <li><a href="../../../enlaces.html">ENLACES</a></li>
                 <li><a href="../../../sobre-mi.html">SOBRE MÍ</a></li>
@@ -800,7 +800,7 @@
                 <!-- FASE 1: SELECCIÓN DE TEMAS Y CONFIGURACIÓN -->
                 <div id="fase-seleccion" class="test-container">
                     <nav class="breadcrumb">
-                        <a href="../../index.html">Temario</a>
+                        <a href="../../../temario.html">Temario</a>
                         <span>›</span>
                         <a href="../primer-ejercicio.html">Primer ejercicio</a>
                         <span>›</span>
