--- a/temario/quinto-ejercicio.html
+++ b/temario/quinto-ejercicio.html
@@ -33,7 +33,7 @@
     <main class="main-content">
         <div class="content-container">
             <article class="page-content">
-                <nav class="breadcrumb"><a href="index.html">Temario</a><span>›</span>Quinto ejercicio</nav>
+                <nav class="breadcrumb"><a href="../temario.html">Temario</a><span>›</span>Quinto ejercicio</nav>
                 <h2 class="section-title">Quinto ejercicio</h2>
                 <div class="temas-list">
                     <div class="tema-item">
