--- a/temario/tema-no-disponible.html
+++ b/temario/tema-no-disponible.html
@@ -41,7 +41,7 @@
     <main class="main-content">
         <div class="content-container">
             <article class="page-content">
-                <nav class="breadcrumb"><a href="index.html">Temario</a><span>›</span>Tema no disponible</nav>
+                <nav class="breadcrumb"><a href="../temario.html">Temario</a><span>›</span>Tema no disponible</nav>
                 <h2 class="section-title">TEMA NO DISPONIBLE</h2>
                 <div class="content-text" style="text-align: center; padding: 3rem 1rem;">
                     <p style="font-size: 1.2rem; color: var(--color-text-muted);">Este tema no está disponible actualmente.</p>
