--- a/temario/cuarto-ejercicio.html
+++ b/temario/cuarto-ejercicio.html
@@ -35,7 +35,7 @@
     <main class="main-content">
         <div class="content-container">
             <article class="page-content">
-                <nav class="breadcrumb"><a href="index.html">Temario</a><span>›</span>Cuarto ejercicio</nav>
+                <nav class="breadcrumb"><a href="../temario.html">Temario</a><span>›</span>Cuarto ejercicio</nav>
                 <h2 class="section-title">Cuarto ejercicio</h2>
                 <div class="temas-list">
                     <div class="tema-group">
