--- a/temario/primer-ejercicio.html
+++ b/temario/primer-ejercicio.html
@@ -102,7 +102,7 @@
         <div class="content-container">
             <article class="page-content">
                 <nav class="breadcrumb">
-                    <a href="index.html">Temario</a><span>›</span>Primer ejercicio
+                    <a href="../temario.html">Temario</a><span>›</span>Primer ejercicio
                 </nav>
                 
                 <h2 class="section-title">Primer ejercicio</h2>
