--- a/temario/primer-ejercicio/test.html
+++ b/temario/primer-ejercicio/test.html
@@ -112,7 +112,7 @@
         <div class="nav-container">
             <ul class="nav-list">
                 <li><a href="../../index.html">INTRODUCCIÓN</a></li>
-                <li><a href="../index.html" class="active">TEMARIO</a></li>
+                <li><a href="../../temario.html" class="active">TEMARIO</a></li>
                 <li><a href="../../organizacion.html">ORGANIZACIÓN</a></li>
                 <li><a href="../../enlaces.html">ENLACES</a></li>
                 <li><a href="../../sobre-mi.html">SOBRE MÍ</a></li>
@@ -123,7 +123,7 @@
         <div class="content-container">
             <article class="page-content">
                 <nav class="breadcrumb">
-                    <a href="../index.html">Temario</a><span>›</span><a href="../primer-ejercicio.html">Primer ejercicio</a><span>›</span>Test
+                    <a href="../../temario.html">Temario</a><span>›</span><a href="../primer-ejercicio.html">Primer ejercicio</a><span>›</span>Test
                 </nav>
                 
                 <h2 class="section-title">Test</h2>
