--- a/temario/segundo-ejercicio.html
+++ b/temario/segundo-ejercicio.html
@@ -34,7 +34,7 @@
     <main class="main-content">
         <div class="content-container">
             <article class="page-content">
-                <nav class="breadcrumb"><a href="index.html">Temario</a><span>›</span>Segundo ejercicio</nav>
+                <nav class="breadcrumb"><a href="../temario.html">Temario</a><span>›</span>Segundo ejercicio</nav>
                 <h2 class="section-title">Segundo ejercicio</h2>
                 <div class="content-text">
                     <p>El segundo ejercicio consiste en una <strong>prueba sobre idiomas extranjeros</strong>, debiendo demostrarse el conocimiento, como mínimo, de dos idiomas:</p>
