--- a/temario/tema-no-disponible.html
+++ b/temario/tema-no-disponible.html
@@ -47,7 +47,7 @@
                     <p style="font-size: 1.2rem; color: var(--color-text-muted);">Este tema no está disponible actualmente.</p>
                     <p style="color: var(--color-text-light);">Disculpen las molestias.</p>
                     <p style="margin-top: 2rem;">
-                        <a href="index.html" style="display: inline-block; padding: 0.7rem 1.5rem; background: linear-gradient(135deg, #5F2987 0%, #4a1f6b 100%); color: white; text-decoration: none; border-radius: 6px; font-family: 'Source Sans 3', sans-serif; font-size: 0.9rem; font-weight: 500;">← Volver al temario</a>
+                        <a href="../temario.html" style="display: inline-block; padding: 0.7rem 1.5rem; background: linear-gradient(135deg, #5F2987 0%, #4a1f6b 100%); color: white; text-decoration: none; border-radius: 6px; font-family: 'Source Sans 3', sans-serif; font-size: 0.9rem; font-weight: 500;">← Volver al temario</a>
                     </p>
                 </div>
             </article>
