--- a/temario/primer-ejercicio/test/simulador.html
+++ b/temario/primer-ejercicio/test/simulador.html
@@ -802,7 +802,7 @@
                     <nav class="breadcrumb">
                         <a href="../../../temario.html">Temario</a>
                         <span>›</span>
-                        <a href="../primer-ejercicio.html">Primer ejercicio</a>
+                        <a href="../../primer-ejercicio.html">Primer ejercicio</a>
                         <span>›</span>
                         Simulador de test
                     </nav>
