--- a/organizacion.html
+++ b/organizacion.html
@@ -22,6 +22,16 @@
     <meta property="og:url" content="https://www.victorgutierrezmarcos.es/organizacion.html">
     <meta property="og:locale" content="es_ES">
     <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#5F2987">
     
     <!-- Preload de recursos críticos -->
     <link rel="preload" href="styles.css" as="style">
