--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -13,6 +13,16 @@
     <meta name="keywords" content="Víctor Gutiérrez Marcos, técnico comercial, economista del estado, TCEE, funcionario, Ministerio Economía">
     <meta name="author" content="Víctor Gutiérrez Marcos">
     <meta name="robots" content="index, follow">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#5F2987">
     
     <!-- Open Graph / Social Media Preview -->
     <meta property="og:type" content="profile">
