--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oposición TCEE: Temario y materiales gratuitos | Víctor Gutiérrez Marcos</title>
-    <meta name="description" content="Temario, apuntes y materiales gratuitos para preparar la oposición a Técnico Comercial y Economista del Estado (TCEE). Elaborados por un funcionario del cuerpo.">
+    <title>Oposición TCEE: Temario y materiales gratuitos</title>
+    <meta name="description" content="Temario y materiales gratuitos para preparar la oposición a Técnico Comercial y Economista del Estado (TCEE). Elaborados por un funcionario del cuerpo.">
     
     <!-- SEO: Canonical URL -->
     <link rel="canonical" href="https://www.victorgutierrezmarcos.es/">
     
     <!-- SEO: Palabras clave adicionales -->
-    <meta name="keywords" content="oposición TCEE, técnico comercial, economista del estado, temario oposiciones, preparar oposición comercio, materiales oposición">
+    <meta name="keywords" content="oposición TCEE, técnico comercial, economista del estado, temario oposiciones, preparar oposición comercio, materiales oposición, gratis, teco">
     <meta name="author" content="Víctor Gutiérrez Marcos">
     <meta name="robots" content="index, follow">
 
