--- a/temario/primer-ejercicio.html
+++ b/temario/primer-ejercicio.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../search-styles.css">
+    <link rel="canonical" href="https://www.victorgutierrezmarcos.es/temario/primer-ejercicio.html">
 
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
