--- a/temario/primer-ejercicio/test/simulador.html
+++ b/temario/primer-ejercicio/test/simulador.html
@@ -12,7 +12,8 @@
     <meta property="og:image" content="https://victorgutierrezmarcos.es/social-preview.png">
     <meta property="og:url" content="https://victorgutierrezmarcos.es/temario/primer-ejercicio/test/simulador.html">
     <meta name="twitter:card" content="summary_large_image">
-    
+
+    <link rel="canonical" href="https://www.victorgutierrezmarcos.es/temario/primer-ejercicio/test.html">    
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
