--- a/temario/primer-ejercicio/test.html
+++ b/temario/primer-ejercicio/test.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="../../styles.css">
     <link rel="stylesheet" href="../../search-styles.css">
-
+    <link rel="canonical" href="https://www.victorgutierrezmarcos.es/temario/primer-ejercicio/test.html">
     <style>
         .test-options-grid {
             display: grid;
