--- a/temario/quinto-ejercicio.html
+++ b/temario/quinto-ejercicio.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="../favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../search-styles.css">
+    <link rel="canonical" href="https://www.victorgutierrezmarcos.es/temario/quinto-ejercicio.html">
 </head>
 <body>
     <header class="site-header">
