--- a/temario/segundo-ejercicio.html
+++ b/temario/segundo-ejercicio.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon" href="../favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../search-styles.css">
+    <link rel="canonical" href="https://www.victorgutierrezmarcos.es/temario/segundo-ejercicio.html">
 </head>
 <body>
     <header class="site-header">
