--- a/temario/tercer-ejercicio.html
+++ b/temario/tercer-ejercicio.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../search-styles.css">
+    <link rel="canonical" href="https://www.victorgutierrezmarcos.es/temario/tercer-ejercicio.html">
 </head>
 <body>
     <header class="site-header">
