--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -64,7 +64,7 @@
             "@type": "EducationalOrganization",
             "name": "Cuerpo Superior de Técnicos Comerciales y Economistas del Estado"
         },
-        "email": "victorgutierrezmarcos@gmail.com",
+        "email": "contacto@victorgutierrezmarcos.es",
         "url": "https://www.victorgutierrezmarcos.es",
         "sameAs": [
             "https://www.linkedin.com/in/victorgutierrezmarcos",
@@ -145,7 +145,7 @@
                     <h3>Víctor Gutiérrez Marcos</h3>
                     <p class="title">Técnico Comercial y Economista del Estado</p>
                     <p class="promotion">Promoción LXXIII</p>
-                    <a href="mailto:victorgutierrezmarcos@gmail.com" class="contact-link">✉ victorgutierrezmarcos@gmail.com</a>
+                    <a href="mailto:contacto@victorgutierrezmarcos.es" class="contact-link">✉ contacto@victorgutierrezmarcos.es</a>
                     
                     <div class="linkedin-badge">
                         <div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="victorgutierrezmarcos" data-version="v1"></div>
