--- a/temario.html
+++ b/temario.html
@@ -158,7 +158,7 @@
                     <p>Los materiales están actualizados hasta finales de 2023 con la numeración del nuevo temario. Cada tema incluye al principio un breve comentario sobre los cambios necesarios para adaptarse al nuevo título.</p>
                     <div class="highlight-box">
                         <p><strong>Nota importante:</strong> Los materiales aquí compartidos no son infalibles: <em>(i)</em> ni incluyen toda la información que se puede requerir al opositor; <em>(ii)</em> ni toda la información aquí contenida es necesaria para aprobar.</p>
-                        <p>Si detectas cualquier error o tienes sugerencias, escríbeme a <a href="mailto:victorgutierrezmarcos@gmail.com">victorgutierrezmarcos@gmail.com</a></p>
+                        <p>Si detectas cualquier error o tienes sugerencias, escríbeme a <a href="mailto:contacto@victorgutierrezmarcos.es">contacto@victorgutierrezmarcos.es</a></p>
                     </div>
                 </div>
                 <div class="cards-grid">
