--- a/temario.html
+++ b/temario.html
@@ -155,7 +155,7 @@
                 <div class="content-text">
                     <p>La recopilación de materiales es el principal objetivo de esta web. Están agrupados por ejercicios, adoptando para cada ejercicio el enfoque y el formato que he considerado más adecuado.</p>
                     <p>Mi objetivo en esta web es compartir los temas que elaboré durante mi período como opositor, y que incluyen contenidos de diversos manuales, artículos y temas elaborados por otros opositores. En especial, me basé en los temas y los valiosísimos comentarios de mi preparador, Juan Luis Cordero Tarifa, y en los temas de ICEX-CECO.</p>
-                    <p>Los materiales están actualizados hasta finales de 2023 con la numeración del nuevo temario. Cada tema incluye al principio un breve comentario sobre los cambios necesarios para adaptarse al nuevo título.</p>
+                    <p>Los materiales están actualizados hasta finales de 2023 con la numeración del nuevo temario. Los temas del tercer ejercicio incluyen al principio un breve comentario sobre los cambios necesarios para adaptarse al nuevo título.</p>
                     <div class="highlight-box">
                         <p><strong>Nota importante:</strong> Los materiales aquí compartidos no son infalibles: <em>(i)</em> ni incluyen toda la información que se puede requerir al opositor; <em>(ii)</em> ni toda la información aquí contenida es necesaria para aprobar.</p>
                         <p>Si detectas cualquier error o tienes sugerencias, escríbeme a <a href="mailto:contacto@victorgutierrezmarcos.es">contacto@victorgutierrezmarcos.es</a></p>
