--- a/temario/quinto-ejercicio.html
+++ b/temario/quinto-ejercicio.html
@@ -36,6 +36,11 @@
             <article class="page-content">
                 <nav class="breadcrumb"><a href="../temario.html">Temario</a><span>›</span>Quinto ejercicio</nav>
                 <h2 class="section-title">Quinto ejercicio</h2>
+
+                <div class="tema-aviso">
+                    <div class="tema-aviso-titulo">⚠️ Aviso sobre los temas disponibles</div>
+                    <p>Los temas enlazados corresponden al <strong>temario anterior</strong> (convocatorias previas a 2024). El temario actual ha sufrido modificaciones, por lo que el contenido puede no coincidir exactamente con el epígrafe del tema nuevo. Revisa siempre el contenido para verificar su utilidad.</p>
+                </div>
                 <div class="temas-list">
                     <div class="tema-item">
                         <a href="quinto-ejercicio/parte_A.pdf" target="_blank">Parte A: Marketing internacional y técnicas comerciales</a>
