--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <li>La Escuela Ciudadana de Administración Pública (<a href="https://www.ecap.es/hazte-alumna" target="_blank">ECAP</a>) organiza un programa de formación presencial, gratuito, y que tiene un carácter teórico y práctico, impartido por funcionarios y funcionarias públicas.</li>
                     </ul>
 
-                    <p>Puedes escribirme a <a href="mailto:contacto@victorgutierrezmarcos.es" class="contact-link">contacto@victorgutierrezmarcos.es ✉</a>.</p>
+                    <p>Puedes escribirme a <a href="mailto:contacto@victorgutierrezmarcos.es" class="contact-link">contacto@victorgutierrezmarcos.es</a>.</p>
                 </div>
             </article>
         </div>
