--- a/404.html
+++ b/404.html
@@ -222,6 +222,7 @@
                 <li><a href="/organizacion.html">ORGANIZACIÓN</a></li>
                 <li><a href="/enlaces.html">ENLACES</a></li>
                 <li><a href="/sobre-mi.html">SOBRE MÍ</a></li>
+                <li><a href="/blog/index.html">BLOG</a></li>
             </ul>
         </div>
     </nav>
