--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -132,6 +132,7 @@
                 <li><a href="organizacion.html">ORGANIZACIÓN</a></li>
                 <li><a href="enlaces.html">ENLACES</a></li>
                 <li><a href="sobre-mi.html" class="active">SOBRE MÍ</a></li>
+                <li><a href="blog/index.html">BLOG</a></li>
             </ul>
         </div>
     </nav>
