Mejora conexión enlaces

--- a/temario/quinto-ejercicio.html
+++ b/temario/quinto-ejercicio.html
@@ -12,6 +12,57 @@
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../search-styles.css">
     <link rel="canonical" href="https://www.victorgutierrezmarcos.es/temario/quinto-ejercicio.html">
+    <style>
+        .tema-aviso {
+            background: #fff3cd;
+            border: 1px solid #ffc107;
+            border-radius: 8px;
+            padding: 12px 16px;
+            margin-bottom: 20px;
+            font-size: 0.9em;
+            line-height: 1.5;
+        }
+        .tema-aviso-titulo {
+            font-weight: 600;
+            margin-bottom: 8px;
+            color: #856404;
+        }
+        .tema-leyenda {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 16px;
+            margin-top: 10px;
+        }
+        .tema-leyenda-item {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            font-size: 0.85em;
+        }
+        .badge-anterior {
+            background: #e7f3ff;
+            color: #0066cc;
+            font-size: 0.7em;
+            padding: 2px 6px;
+            border-radius: 4px;
+            margin-left: 6px;
+            font-weight: 500;
+        }
+        .badge-parcial {
+            background: #fff3cd;
+            color: #856404;
+            font-size: 0.7em;
+            padding: 2px 6px;
+            border-radius: 4px;
+            margin-left: 6px;
+            font-weight: 500;
+        }
+        .tema-correspondencia {
+            font-size: 0.75em;
+            color: #666;
+            margin-left: 4px;
+        }
+    </style>
 </head>
 <body>
     <header class="site-header">
