--- a/organizacion/ver-presentacion.html
+++ b/organizacion/ver-presentacion.html
@@ -206,6 +206,7 @@
             }
         }
     </style>
+    <link rel="stylesheet" href="../cookie-consent.css">
 </head>
 <body>
     <div class="header">
@@ -289,5 +290,14 @@
             }
         });
     </script>
+    <script src="../cookie-consent.js"></script>
 </body>
+<footer class="site-footer">
+    <div class="footer-content">
+        <p>© 2025 Víctor Gutiérrez Marcos</p>
+        <div class="footer-links">
+            <a href="../politica-cookies.html">Política de cookies</a>
+        </div>
+    </div>
+</footer>
 </html>
