--- a/organizacion.html
+++ b/organizacion.html
@@ -188,13 +188,13 @@
             </a>
         </div>
         <div class="footer-links">
-            <a href="/politica-cookies.html">🍪 Política de cookies</a>
+            <a href="politica-cookies.html">🍪 Política de cookies</a>
         </div>
     </div>
 </footer>
     <script src="search-engine.js"></script>
     <script src="search-ui.js"></script>
     <script src="course-banner.js"></script>
-    <script src="/cookie-consent.js"></script>
+    <script src="cookie-consent.js"></script>
 </body>
 </html>
