--- a/politica-cookies.html
+++ b/politica-cookies.html
@@ -23,6 +23,7 @@
     
     <link rel="canonical" href="https://www.victorgutierrezmarcos.es/politica-cookies.html">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="search-styles.css">
     <link rel="stylesheet" href="cookie-consent.css">
     
     <style>
@@ -321,11 +322,11 @@
 </head>
 <body>
     <header class="site-header">
-    <div class="header-content">
-        <h1 class="site-title"><a href="index.html">Víctor Gutiérrez Marcos</a></h1>
-        <p class="site-description">Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado</p>
-    </div>
-</header>
+        <div class="header-content">
+            <h1 class="site-title"><a href="index.html">Víctor Gutiérrez Marcos</a></h1>
+            <p class="site-description">Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado</p>
+        </div>
+    </header>
 
     <nav class="main-nav">
         <div class="nav-container">
@@ -334,7 +335,7 @@
                 <li><a href="temario.html">TEMARIO</a></li>
                 <li><a href="organizacion.html">ORGANIZACIÓN</a></li>
                 <li><a href="enlaces.html">ENLACES</a></li>
-                <li><a href="sobre-mi.html" class="active">SOBRE MÍ</a></li>
+                <li><a href="sobre-mi.html">SOBRE MÍ</a></li>
                 <li><a href="blog/index.html">BLOG</a></li>
             </ul>
         </div>
