--- a/organizacion/ver-presentacion.html
+++ b/organizacion/ver-presentacion.html
@@ -206,6 +206,8 @@
             }
         }
     </style>
+    <!-- Preload de recursos críticos -->
+    <link rel="preload" href="../styles.css" as="style">
     <link rel="stylesheet" href="../cookie-consent.css">
 </head>
 <body>
