--- a/organizacion/ver-presentacion.html
+++ b/organizacion/ver-presentacion.html
@@ -208,6 +208,7 @@
     </style>
     <!-- Preload de recursos críticos -->
     <link rel="preload" href="../styles.css" as="style">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../cookie-consent.css">
 </head>
 <body>
