--- a/organizacion/ver-presentacion.html
+++ b/organizacion/ver-presentacion.html
@@ -214,7 +214,7 @@
 <body>
     <div class="header">
         <a href="../organizacion.html" class="back-link">← Volver a Organización</a>
-        <h1>Estructura del Temario</h1>
+        <h1>Estructura del temario</h1>
         <p>Presentación interactiva con transiciones y enlaces</p>
     </div>
     
