Add Twitter meta tags for improved social sharing
Added twitter:title, twitter:description, and twitter:image meta tags to enlaces.html, organizacion.html, sobre-mi.html, and temario.html to enhance link previews and social sharing on Twitter.

--- a/404.html
+++ b/404.html
@@ -12,7 +12,10 @@
     <meta property="og:description" content="Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado">
     <meta property="og:image" content="https://victorgutierrezmarcos.es/social-preview.png">
     <meta name="twitter:card" content="summary_large_image">
-    
+    <meta name="twitter:title" content="Página no encontrada | Víctor Gutiérrez Marcos">
+    <meta name="twitter:description" content="Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado">
+    <meta name="twitter:image" content="https://www.victorgutierrezmarcos.es/social-preview.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
