--- a/enlaces.html
+++ b/enlaces.html
@@ -22,6 +22,9 @@
     <meta property="og:url" content="https://www.victorgutierrezmarcos.es/enlaces.html">
     <meta property="og:locale" content="es_ES">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Enlaces y recursos para preparar la oposición TCEE">
+    <meta name="twitter:description" content="Recopilación de enlaces útiles: blogs de economía, think tanks y medios especializados.">
+    <meta name="twitter:image" content="https://www.victorgutierrezmarcos.es/social-preview.png">
 
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
