--- a/organizacion.html
+++ b/organizacion.html
@@ -22,6 +22,9 @@
     <meta property="og:url" content="https://www.victorgutierrezmarcos.es/organizacion.html">
     <meta property="og:locale" content="es_ES">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Organización y planificación para opositar a TCEE">
+    <meta name="twitter:description" content="Recursos de organización para preparar la oposición: cronogramas, plantillas y consejos de planificación.">
+    <meta name="twitter:image" content="https://www.victorgutierrezmarcos.es/social-preview.png">
 
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
