--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -34,7 +34,10 @@
     <meta property="profile:first_name" content="Víctor">
     <meta property="profile:last_name" content="Gutiérrez Marcos">
     <meta name="twitter:card" content="summary_large_image">
-    
+    <meta name="twitter:title" content="Víctor Gutiérrez Marcos - Técnico Comercial y Economista del Estado">
+    <meta name="twitter:description" content="Técnico Comercial y Economista del Estado (Promoción LXXIII). Materiales gratuitos para preparar la oposición.">
+    <meta name="twitter:image" content="https://www.victorgutierrezmarcos.es/social-preview.png">
+
     <!-- Preload de recursos críticos -->
     <link rel="preload" href="styles.css" as="style">
     <!-- Estilos del banner de cookies -->
