--- a/temario.html
+++ b/temario.html
@@ -32,7 +32,10 @@
     <meta property="og:url" content="https://www.victorgutierrezmarcos.es/temario.html">
     <meta property="og:locale" content="es_ES">
     <meta name="twitter:card" content="summary_large_image">
-    
+    <meta name="twitter:title" content="Temario oposición Técnico Comercial y Economista del Estado | TCEE">
+    <meta name="twitter:description" content="Temario completo de la oposición TCEE: 5 ejercicios con economía, idiomas, marketing y derecho. Temas actualizados al nuevo programa.">
+    <meta name="twitter:image" content="https://www.victorgutierrezmarcos.es/social-preview.png">
+
     <!-- Preload de recursos críticos -->
     <link rel="preload" href="styles.css" as="style">
 
