--- a/temario/segundo-ejercicio.html
+++ b/temario/segundo-ejercicio.html
@@ -16,6 +16,34 @@
     <link rel="stylesheet" href="../cookie-consent.css">
 
     <link rel="canonical" href="https://www.victorgutierrezmarcos.es/temario/segundo-ejercicio.html">
+
+    <!-- SEO: Datos estructurados Schema.org - BreadcrumbList -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Inicio",
+                "item": "https://www.victorgutierrezmarcos.es/"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Temario",
+                "item": "https://www.victorgutierrezmarcos.es/temario.html"
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "name": "Segundo ejercicio",
+                "item": "https://www.victorgutierrezmarcos.es/temario/segundo-ejercicio.html"
+            }
+        ]
+    }
+    </script>
 </head>
 <body>
     <header class="site-header">
