--- a/temario/cuarto-ejercicio.html
+++ b/temario/cuarto-ejercicio.html
@@ -17,6 +17,35 @@
     <link rel="stylesheet" href="../cookie-consent.css">
 
     <link rel="canonical" href="https://www.victorgutierrezmarcos.es/temario/cuarto-ejercicio.html">
+
+    <!-- SEO: Datos estructurados Schema.org - BreadcrumbList -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Inicio",
+                "item": "https://www.victorgutierrezmarcos.es/"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Temario",
+                "item": "https://www.victorgutierrezmarcos.es/temario.html"
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "name": "Cuarto ejercicio",
+                "item": "https://www.victorgutierrezmarcos.es/temario/cuarto-ejercicio.html"
+            }
+        ]
+    }
+    </script>
+
     <style>
         .tema-aviso {
             background: #fff3cd;
