--- a/temario/primer-ejercicio.html
+++ b/temario/primer-ejercicio.html
@@ -16,6 +16,34 @@
 
     <link rel="canonical" href="https://www.victorgutierrezmarcos.es/temario/primer-ejercicio.html">
 
+    <!-- SEO: Datos estructurados Schema.org - BreadcrumbList -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Inicio",
+                "item": "https://www.victorgutierrezmarcos.es/"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Temario",
+                "item": "https://www.victorgutierrezmarcos.es/temario.html"
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "name": "Primer ejercicio",
+                "item": "https://www.victorgutierrezmarcos.es/temario/primer-ejercicio.html"
+            }
+        ]
+    }
+    </script>
+
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
