--- a/organizacion.html
+++ b/organizacion.html
@@ -143,7 +143,7 @@
                         <li>Simulador de sorteos de temas.</li>
                         <li>Base para elaborar cronogramas y horarios semanales.</li>
                     </ul>
-                    <a href="organizacion/Estrategia y organización.zip" class="download-btn" download>Descargar Excel</a>
+                    <a href="organizacion/preparacion_oposicion_tcee.xlsm" class="download-btn" download>Descargar Excel</a>
                 </div>
 
                 <div class="resource-item">
@@ -168,7 +168,10 @@
                         <li><strong>Plantilla para elaborar temas largos</strong> (plantilla de Word): Es la plantilla de Word que he utilizado para elaborar mis temas, por si alguien quisiera elaborar temas con una estructura similar. Es fácilmente modificable por lo que se puede amoldar a las preferencias y manías personales.</li>
                         <li><strong>Plantilla para elaborar temas cortos</strong> (plantilla de Word): Se trata de una plantilla alternativa por si preferís elaborar temas más esquemáticos en menos páginas.</li>
                     </ul>
-                    <a href="organizacion/Plantillas.zip" class="download-btn" download>Descargar plantillas</a>
+                    <div style="display: flex; gap: 1rem; flex-wrap: wrap; margin-top: 1rem;">
+                        <a href="organizacion/1_plantilla_temas_largos.dotx" class="download-btn" download>Descargar plantilla para temas largos</a>
+                        <a href="organizacion/2_plantilla_temas_cortos.dotx" class="download-btn" download>Descargar plantilla para temas cortos</a>
+                    </div>
                 </div>
             </article>
         </div>
