--- a/organizacion.html
+++ b/organizacion.html
@@ -143,7 +143,10 @@
                         <li>Simulador de sorteos de temas.</li>
                         <li>Base para elaborar cronogramas y horarios semanales.</li>
                     </ul>
-                    <a href="organizacion/preparacion_oposicion_tcee.xlsm" class="download-btn" download>Descargar Excel</a>
+                    <div style="display: flex; gap: 1rem; flex-wrap: wrap; margin-top: 1rem;">
+                        <a href="organizacion/preparacion_oposicion_tcee.xlsm" class="download-btn" target="_blank">Ver Excel</a>
+                        <a href="organizacion/preparacion_oposicion_tcee.xlsm" class="download-btn" download>Descargar Excel</a>
+                    </div>
                 </div>
 
                 <div class="resource-item">
